--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     --very-dark-cyan: hsl(179, 100%, 13%);
     --transparent-white: hsla(0, 0%, 100%, 0.75);
     --very-light-gray: hsl(0, 0%, 95%);
-    --section-width: 350px;
+    --section-width: 300px;
     --section-height: 500px;
+    --border-radius: 10px;
 }
 
 body {
@@ -23,28 +24,93 @@ body {
 }
 
 .section-wrapper {
-    height: var(--section-height);
-    width: var(--section-width);
+    width: calc(var(--section-width) - 80px);
+    padding: 40px;
 }
 
+.section-header {
+    color: white;
+    font-weight: 700;
+    font-family: 'Big Shoulders Display', cursive;
+    font-size: 2.2rem;
+}
+
+.section-description {
+    color: var(--transparent-white);
+    font-weight: 400;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 15px;
+    max-width: 210px;
+    line-height: 25px;
+}
+
+.section-button {
+    position: relative;
+    width: 140px;
+    height: 50px;
+    border-radius: 25px;
+    border: 2px solid;
+    border-color: white;
+    font-family: 'Lexend Deca', sans-serif;
+    font-weight: 400;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 1);
+    transition: background-color .5s;
+    margin-top: 70px;
+}
+
+.section-button:hover {
+    color: var(--transparent-white);
+    background-color: rgba(255, 255, 255, 0);
+    transition: background-color .5s;
+}
+
+.sedans-button {
+    color: var(--bright-orange);
+}
+
+.suvs-button {
+    color: var(--dark-cyan);
+}
+
+.luxury-button {
+    color: var(--very-dark-cyan);
+}
+
+
 .section-wrapper:first-child {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: var(--border-radius);
+    border-bottom-left-radius: var(--border-radius);
 }
 
 .section-wrapper:last-child {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
 }
 
 @media only screen and (max-width: 1100px) {
     body {
         justify-content: flex-start;
     }
+
     .main-wrapper {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
+
+    .section-wrapper:first-child {
+        border-bottom-left-radius: 0;
+        border-top-right-radius: var(--border-radius);
+    }
+
+    .section-wrapper:last-child {
+        border-top-right-radius: 0;
+        border-bottom-left-radius: var(--border-radius);
+    }
+
+    .section-description {
+        max-width: 2000px;
     }
 }
