--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     cursor: pointer;
     background-color: rgba(255, 255, 255, 1);
     transition: background-color .5s;
-    margin-top: 70px;
+    margin-top: 55px;
 }
 
 .section-button:hover {
@@ -98,6 +98,10 @@ body {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
+
+    .section-button {
+        margin-top: 10px;
     }
 
     .section-wrapper:first-child {
